# c_cpp_labs

hw-01_bmp/: .gitignore  Makefile
hw-01_bmp/include/: bmp.h
hw-01_bmp/src/: bmp.c  main.c
hw-02_huffman/: .gitignore  CMakeLists.txt  Makefile  README.md
hw-02_huffman/include/: bytes_representation.hpp  compressed_data.hpp  decompressed_data.hpp  huffman_archiver.hpp  huffman_tree.hpp  huffman_tree_node.hpp  logger.hpp  reader.hpp  writer.hpp
hw-02_huffman/src/: bytes_representation.cpp  compressed_data.cpp  decompressed_data.cpp  huffman_archiver.cpp  huffman_tree.cpp  huffman_tree_node.cpp  logger.cpp  main.cpp  reader.cpp  writer.cpp
hw-02_huffman/test/: test.cpp
hw-02_huffman/tests/: 01_compress.test.args  02_decompress.test.args  sample.txt
lab-01_makefile/: Makefile
lab-01_makefile/include/: algorithm.h  io.h
lab-01_makefile/src/: algorithm.c  io.c  main.c  util.c
lab-02_cstrings/: Makefile
lab-02_cstrings/include/: str.h  test_str.h
lab-02_cstrings/src/: str.c  test.c  test_str.c
lab-03_mergesort/: Makefile
lab-03_mergesort/include/: mergesort.h
lab-03_mergesort/src/: main.c  mergesort.c
lab-04_intrusive-list/: .gitignore  Makefile
lab-04_intrusive-list/include/: clist.h
lab-04_intrusive-list/src/: clist.c  main.c
lab-05_c-io/: .gitignore  Makefile
lab-05_c-io/include/: clist.h  point_list.h
lab-05_c-io/src/: clist.c  main.c  point_list.c
lab-06_int-vector/: .gitignore  Makefile
lab-06_int-vector/include/: my_vector.hpp
lab-06_int-vector/src/: my_vector.cpp
lab-07_matrix/: .gitignore  Makefile
lab-07_matrix/include/: matrix.h
lab-07_matrix/src/: main.cpp  matrix.cpp
lab-08_shared-ptr/: .gitignore  Makefile
lab-08_shared-ptr/src/: matrix.cpp
lab-09_figures/: .gitignore  Makefile
lab-09_figures/include/: Circle.hpp  Figure.hpp  Rectangle.hpp  Scheme.hpp
lab-09_figures/src/: Circle.cpp  Figure.cpp  Rectangle.cpp  Scheme.cpp
lab-10_cppio/: .gitignore  Makefile
lab-10_cppio/include/: bin_manip.h  employees.h
lab-10_cppio/src/: bin_manip.cpp  employees.cpp  main.cpp
lab-11_vector/: .gitignore  Makefile
lab-11_vector/include/: my_vector.hpp  my_vector_impl.hpp
lab-11_vector/src/: main.cpp
lab-12_exceptions/: .gitignore  Makefile
lab-12_exceptions/include/: matrix.h
lab-12_exceptions/src/: main.cpp  matrix.cpp
lab-13_array/: .gitignore  Makefile  README.md
lab-14_linq/: CMakeLists.txt  README.md
lab-14_linq/include/: linq.hpp
lab-14_linq/src/: test.cpp
lab-14_linq/tests/: minimal_smoke_test.cpp  smoke_test.cpp
(+2 files in other folders)
